tree-sitter-omnetpp-ned/grammar.js
    _EMPTYLINE: $ => /\r?\n\s*\r?\n\s*/,
    
    definition: $ => choice(
      $.comment,
      // $._EMPTYLINE,
      $.packagedeclaration,
      $.import,
      $.propertydecl,
      $.fileproperty,
      $.channeldefinition,
      $.channelinterfacedefinition,
      $.simplemoduledefinition,
      $.compoundmoduledefinition,
      $.networkdefinition,
      $.moduleinterfacedefinition,
      ';'
    ),

    // comment: $ => alias(prec.right(repeat1($._commentline)), $.content),

    comment: _ => token(choice(
      seq('//', /(\\+(.|\r?\n)|[^\\\n])*/),
      seq(
        '/*',
        /[^*]*\*+([^/*][^*]*\*+)*/,
        '/',
      ),    // TODO is that needed in msg files?
    )),
    

    dottedname: $ => prec.right(seq($.NAME, repeat(seq('.', $.NAME)))),

    // import: $ => seq(
    //   'import',
    //   $.importspec,
    //   ';'
    // ),

    // importspec: $ => choice(
    //   seq($.importspec, '.', $.importname),
    //   $.importname
    // ),

    // importspec: $ => prec.right(seq($.importname, repeat(seq(',', $.importname)))),

    import: $ => seq('import', $.importspec, ';'),

    property: $ => seq(
      $.property_namevalue,
      // ';'
    ),
    
    paramblock: $ => choice(
      $.params,
      seq('parameters:', $.params)
    ),

    // paramblock: $ => seq(optional('parameters:'), $.params),

    // params: $ => choice(
    //   seq($.params, $.paramsitem),
    //   $.paramsitem
    // ),

    params: $ => repeat1($.paramsitem),

    paramsitem: $ => prec.right(10, seq(choice($.param, $.property), ';')),

    // TODO opt_paramblock: optional(params)
    
    param: $ => choice(
      $.param_typenamevalue,
      $.parampattern_value
    ),
    
    param_typenamevalue: $ => choice(
      seq(
        $.param_typename,
        optional($.inline_properties)
      ),
      seq(
        $.param_typename,
        optional($.inline_properties),
        '=',
        $.paramvalue,
        optional($.inline_properties)
      )
    ),

    param_typename: $ => choice(
      seq(
        optional('volatile'),
        $.paramtype,
        $.NAME
      ),
      $.NAME
    ),
    
    paramtype: $ => choice(
      'double',
      'int',
      'string',
      'bool',
      'object',
      'xml'
    ),
    
    // TODO opt_volatile -> 'volatile'
    
    paramvalue: $ => choice(
      $.expression,
      seq('default', '(', $.expression, ')'),
      'default',
      'ask',
    ),
    
    // opt_inline_properties
    
    // inline_properties: $ => choice(
    //   $.property_namevalue,
    //   seq($.inline_properties, $.property_namevalue)
    // ),

    inline_properties: $ => repeat1($.property_namevalue),

    pattern: $ => seq(prec.right(seq($.pattern_elem, repeat(seq('.', $.pattern_elem)))), '.', choice($.pattern_elem, 'typename')),
    
    pattern_elem: $ => choice(
      seq($.pattern_name, '[', $.pattern_index, ']'),
      seq($.pattern_name, '[', '*', ']'),
      '**',
      $.pattern_name
    ),
    
    // pattern_name: $ => prec.left(choice(
    //   seq($.NAME, '$', $.NAME),
    //   $.NAME,
    //   'channel',
    //   seq('{', $.pattern_index, '}'),
    //   '*',
    //   seq($.pattern_name, $.NAME),
    //   seq($.pattern_name, '{', $.pattern_index, '}'),
    //   seq($.pattern_name, '*')
    // )),

    pattern_name: $ => prec.right(10, repeat1(choice(
      $.NAME,
      seq($.NAME, '$', $.NAME),
      'channel',
      seq('{', $.pattern_index, '}'),
      '*',
    ))),
    
    property_key: $ =>
      prec.right(choice(
        seq(
          $.property_literal,
          '=',
          $.property_value
        ),
          $.property_values,
      )),

    // property_values: $ =>
    //   prec.right(10, choice(
    //     seq($.property_values, optional(seq(',', $.property_value))),
    //     $.property_value
    // )),

    gate: $ =>
      seq($.gate_typenamesize, optional($.inline_properties), ';'),

    submodule: $ => choice(
      seq($.submoduleheader, ';'),
      seq(
        $.submoduleheader,
        '{',
        optional(optional($.paramblock)),
        optional(optional($.gateblock)),
        '}',
        optional(';')
      )
    ),

    submoduleheader: $ => choice(
      seq($.submodulename, ':', $.dottedname, optional($.condition)),
      seq($.submodulename, ':', $.likeexpr, 'like', $.dottedname, optional($.condition))
    ),

    submodulename: $ => prec.right(choice($.NAME, seq($.NAME, $.vector))),

    // opt_condition

    likeexpr: $ => choice(
      seq('<', '>'),
      seq('<', $.expression, '>'),
      seq('<', 'default', '(', $.expression, ')', '>'),
    ),

    // opt_connblock

    connections_block: $ => prec.right(seq(
      'connections',
      optional('allowunconnected'),
      ':',
      repeat(choice($.connection, $.loop_or_condition)),
    )),

    // connection: $ => prec(10, seq(
    //   $.connectionname, $.conn_direction, optional(seq(optional($.NAME), optional(seq('{', repeat1(seq(choice($.param, $.property)), '}')), $.conn_direction))), $.connectionname, optional($.condition), ';'
    // )),

    connection: $ => prec.right(choice(
      seq($.connectionname, $.conn_direction, $.connectionname, optional($.loops_and_conditions), ';'),
      seq($.connectionname, $.conn_direction, $.channelspec, $.conn_direction, $.connectionname, optional($.loops_and_conditions), ';'),
    )),

    // link: $ => prec.right(seq($.conn_direction, optional(seq($.identifier, $.conn_direction)))),

    condition: $ => seq('if', $.expression),

    expression: $ => prec.right(10, choice(
      $.simple_expr,
      $.functioncall,
      seq($.expression, '.', $.functioncall),
      $.object,
      $.array,
      seq('(', $.expression, ')'),
    
      seq($.expression, '+', $.expression),
      seq($.expression, '-', $.expression),
      seq($.expression, '*', $.expression),
      seq($.expression, '/', $.expression),
      seq($.expression, '%', $.expression),
      seq($.expression, '^', $.expression),
      seq('-', $.expression),
    
      seq($.expression, '==', $.expression),
      seq($.expression, '!=', $.expression),
      seq($.expression, '>', $.expression),
      seq($.expression, '>=', $.expression),
      seq($.expression, '<', $.expression),
      seq($.expression, '<=', $.expression),
      seq($.expression, '<=>', $.expression),
      seq($.expression, 'match', $.expression),
    
      seq($.expression, '&&', $.expression),
      seq($.expression, '||', $.expression),
      seq($.expression, '^^', $.expression),
    
      seq('!', $.expression),
    
      seq($.expression, '&', $.expression),
      seq($.expression, '|', $.expression),
      seq($.expression, '#', $.expression),
    
      seq('~', $.expression),
      seq($.expression, '<<', $.expression),
      seq($.expression, '>>', $.expression),
    
      seq($.expression, '?', $.expression, ':', $.expression)
    )),

    qname: $ => prec.right(seq($.qname_elem, repeat(seq('.', $.qname_elem)))),
    
    operator: $ => prec(20, choice(
      'index',
      'typename',
      seq($.qname, '.', 'index'),
      seq($.qname, '.', 'typename'),
      seq('exists', '(', $.qname, ')'),
      seq('sizeof', '(', $.qname, ')')
    )),
